--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Kevin Guzman" />
 
 
 <title>Simple document</title>
@@ -349,6 +350,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Simple document</h1>
+<h4 class="author">Kevin Guzman</h4>
+<h4 class="date">09-10-2025</h4>
 
 </div>
 
@@ -361,10 +364,16 @@ distribution</em>:</p>
 <pre class="r"><code>samp = rnorm(100)
 length(samp)</code></pre>
 <pre><code>## [1] 100</code></pre>
+<pre class="r"><code>a &lt;- 3+3
+a</code></pre>
+<pre><code>## [1] 6</code></pre>
+<pre class="r"><code>b &lt;- 5+5
+b</code></pre>
+<pre><code>## [1] 10</code></pre>
 </div>
 <div id="section-2" class="section level1">
 <h1>Section 2</h1>
-<p>I can take the mean of the sample, too! The mean is -0.0848782.</p>
+<p>I can take the mean of the sample, too! The mean is 0.0358003.</p>
 </div>
 
 
