--- a/template.html
+++ b/template.html
@@ -367,15 +367,16 @@ length(samp)</code></pre>
 <pre class="r"><code>a &lt;- 3+3
 a</code></pre>
 <pre><code>## [1] 6</code></pre>
+<pre class="r"><code>c &lt;- 4+4</code></pre>
 <pre class="r"><code>b &lt;- 5+5
 b</code></pre>
 <pre><code>## [1] 10</code></pre>
 <pre class="r"><code>c</code></pre>
-<pre><code>## function (...)  .Primitive(&quot;c&quot;)</code></pre>
+<pre><code>## [1] 8</code></pre>
 </div>
 <div id="section-2" class="section level1">
 <h1>Section 2</h1>
-<p>I can take the mean of the sample, too! The mean is 0.0388926.</p>
+<p>I can take the mean of the sample, too! The mean is -0.1066404.</p>
 </div>
 
 
